<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zamówienia</string>
    <string name="action_settings">Settings</string>
    <string name="listButton">Lista zamówień</string>
    <string name="addButton">Dodaj zamówienie</string>
    <string name="settingButton">Ustawienia</string>
    <string name="appTitle">Zamówienia</string>
    <string name="addClientButton">Dodaj klienta</string>
    <string name="title_activity_add_client">Dodaj Klienta</string>
    <string name="addClientLbl">Dodaj klienta</string>
    <string name="addClientNameLbl">Nazwa Klienta</string>
    <string name="addClientAddressLbl">Adres Klienta</string>
    <string name="addClientAddBtn">Zapisz</string>
    <string name="addClientCancelBtn">Anuluj</string>
    <string name="title_activity_list_client">Lista Klientów</string>
    <string name="hello_world">Hello world!</string>
    <string name="clientListLbl">Lista Klientów</string>
    <string name="clientListButton">Lista Klientów</string>
    <string name="title_activity_client_detail">Klient</string>
    <string name="clientDetailSaveBtn">Zapisz</string>
    <string name="clientDetailDeleteBtn">Usuń klienta</string>
    <string name="addClientListBtn">Lista klientów</string>
    <string name="mainScreenMenu">Menu</string>
    <string name="addClientMenu">Dodaj klienta</string>
    <string name="clientListMenu">Lista</string>
    <string name="addOrderNameLbl">Nazwa zamówienia</string>
    <string name="title_activity_add_order">Dodaj Zamówienie</string>
    <string name="addOrderContent">Treść Zamówienia</string>
    <string name="title_activity_settings">Ustawienia</string>
    <string name="sUserName">Nazwa użytkownika</string>
    <string name="settingsHost">Host</string>
    <string name="title_activity_sync">Synchronizuj</string>
    <string name="settingsSyncBtn">Synchronizuj</string>
    <string name="syncClient">Klienci</string>
    <string name="syncClinetsBtn">Klienci</string>
    <string name="title_activity_list_orders">Lista Zamowien</string>

</resources>
