<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="pl.lublin.wsei.pum.ppd.orders.ClientDetail">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/addClientNameLbl"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/clientDetailName"
        android:layout_below="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/addClientAddressLbl"
        android:id="@+id/textView6"
        android:layout_below="@+id/clientDetailName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/clientDetailAddress"
        android:layout_below="@+id/textView6"
        android:layout_alignRight="@+id/clientDetailName"
        android:layout_alignEnd="@+id/clientDetailName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clientDetailSaveBtn"
        android:id="@+id/clientDetailSave"
        android:onClick="updateClient"
        android:layout_below="@+id/clientDetailAddress"
        android:layout_toLeftOf="@+id/clientDetailCancel"
        android:layout_toStartOf="@+id/clientDetailCancel" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clientDetailDeleteBtn"
        android:id="@+id/clientDetailDelete"
        android:layout_alignTop="@+id/clientDetailSave"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="deleteClient"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addClientCancelBtn"
        android:id="@+id/clientDetailCancel"
        android:onClick="cancel"
        android:layout_alignTop="@+id/clientDetailSave"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
